# fancyinfo

./: .gitignore  CMakeLists.txt  flake.nix
include/: command-list.h  file-detail-formatter.h  file-size-printer.h  file-size-properties.h  print-command.h
src/: command-list.cpp  main.cpp  print-command.cpp
